--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mini programme permettant d'afficher le cours du bitcoin ",
   "main": "btc.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon btc.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/Khalid0306/cours-bitcoin/issues"
   },
-  "homepage": "https://github.com/Khalid0306/cours-bitcoin#readme",
-  "dependencies": {
-    "axios": "^1.5.0"
-  }
+  "homepage": "https://github.com/Khalid0306/cours-bitcoin#readme"
 }
